work in preformance

--- a/src/Components/NavbarCom/NestedLink/NestedLink..css
+++ b/src/Components/NavbarCom/NestedLink/NestedLink..css
@@ -1,18 +1,10 @@
-/* .navbarSec .navLinks > li:has(.NestedLink) .navLink:focus{
+.navbarSec .navLinks > 
+li:has(.nestedLinkBox.opened) .navLink {
     color: var(--color-primary);
 }
-.navbarSec .navLinks > li:has(.NestedLink) .navLink:focus::after{
-    bottom: 0;
-    outline: none;
-} */
+
 
 @media screen and ( max-width:768px ) {
-    /* .navbarSec .navLinks > li:has(.NestedLink) .navLink:focus{
-        color: var(--color-primary);
-    }
-    .navbarSec .navLinks > li:has(.NestedLink) .navLink:focus::after{
-        display: none;
-    } */
 
     .navbarSec .navLinks > li:has(.NestedLink){
         height: 47px;
