--- a/src/Components/NavbarCom/MiniNestedBx/MiniNestedBx.css
+++ b/src/Components/NavbarCom/MiniNestedBx/MiniNestedBx.css
@@ -1,30 +1,46 @@
 html[dir="rtl"] .navbarSec .miniNestedBx{
-    left: -80%;
+    left: -87.5%;
+    transform: translateX( 5px );
 }
 html[dir="rtl"] .navbarSec .linkItem:hover .miniNestedBx{
-    left: -90%;
+    transform: translateX( 0px ) ;
 }
 /*miniNestedBx*/
 
 .navbarSec .linkItem:hover .miniNestedBx{
-    left: 102%;
     visibility: visible;
     opacity: 1;
+    pointer-events: auto;
+    transform: translateX(0px);
 }
 
 
 .navbarSec .miniNestedBx{
     width: 120px;
     position: absolute;
-    left: 92%;
+    left: 101%;
+    transform: translateX(-5px) ;
     display: flex;
     flex-direction: column;
     padding-block: 7px;
     border-radius: 5px;
     border: 1px solid var(--color-borderLight);
-    background-color: var(--bg-nested);
+    pointer-events: none;
     opacity: 0;
     visibility: hidden;
+    transition: var(--transition-main);
+}
+.navbarSec .miniNestedBx::before {
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 5px;
+    backdrop-filter: var(--main-blur);
+    background: var(--bg-glass);
     transition: var(--transition-main);
 }
 .navbarSec .miniNestedBx .miniItem{
@@ -39,6 +55,10 @@ html[dir="rtl"] .navbarSec .linkItem:hover .miniNestedBx{
 .navbarSec .miniNestedBx .miniItem:hover{
     color: var(--color-primary);
     transform: translateX(5px);
+}
+html[dir="rtl"]  .navbarSec 
+.miniNestedBx .miniItem:hover{
+    transform: translateX(-5px);
 }
 .navbarSec .miniNestedBx  .miniItem a span{
     color: var(--font-navColor);
