--- a/src/Components/NavbarCom/NavLinks/NavLinks.css
+++ b/src/Components/NavbarCom/NavLinks/NavLinks.css
@@ -87,24 +87,36 @@
         align-items: flex-start;
         gap: 0px !important;
         position: absolute;
-        top: 0;
+        top: 110%;
         left: 50%;
-        transform: translate(-50%,  -100%);
+        transform: translate(-50%, -100%);
         width: calc( 100% - var(--margin-main) );
         z-index: 1;
         padding-block: 0px;
-        background-color: var(--bg-glass);
-        backdrop-filter: var(--main-blur);
         border: 1px solid #ffffff23;
         border-radius: 10px;
         box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
         opacity: 0;
         visibility: hidden;
+        pointer-events: none;
         transition: var(--transition-sec);
     }
+    .navbarSec .navLinks::before {
+        content:"";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        border-radius: 10px;
+        backdrop-filter: var(--main-blur);
+        background: var(--bg-glass);
+        transition: var(--transition-main);
+    }
     .navbarSec .navLinks.opened{
-        top: calc(100% + 10px);
-        transform: translate(-50%, 0);
+        transform: translate(-50%, 0%);
+        pointer-events: auto;
         visibility: visible;
         opacity: 1;
     }
