--- a/src/Components/NavbarCom/NestedLinkBox/NestedLinkBox.css
+++ b/src/Components/NavbarCom/NestedLinkBox/NestedLinkBox.css
@@ -13,7 +13,6 @@
     transform: translateX(-50%);
     z-index: 3;
     padding-block: 7px;
-    background-color: var(--bg-nested);
     border: 1px solid var(--color-borderLight);
     border-radius: 5px;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
@@ -22,6 +21,19 @@
     cursor: default;
     opacity: 0;
     visibility: hidden;
+    transition: var(--transition-main);
+}
+.navbarSec .nestedLinkBox::before {
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 5px;
+    backdrop-filter: var(--main-blur);
+    background: var(--bg-glass);
     transition: var(--transition-main);
 }
 .navbarSec .nestedLinkBox a{
@@ -65,16 +77,6 @@
     color: var(--color-primary) ;
 }
 
-/* .navbarSec .linkItem:first-child {
-    padding-block: 10px;
-    margin-bottom: 7px;
-    border-bottom: 1px solid #ffffff23;
-}
-.navbarSec .linkItem:last-child {
-    padding-block: 10px;
-    margin-top: 7px;
-    border-top: 1px solid #ffffff23;
-} */
 
 
 
@@ -82,6 +84,10 @@
 .navbarSec .linkItem > a:hover{
     color: var(--color-primary);
     transform: translateX(5px);
+}
+html[dir="rtl"] .navbarSec 
+.linkItem > a:hover{
+    transform: translateX(-5px);
 }
 /*End Hover*/
 
