--- a/src/Components/NavbarCom/ProfileBox/ProfileBox.css
+++ b/src/Components/NavbarCom/ProfileBox/ProfileBox.css
@@ -8,7 +8,6 @@
     position: absolute;
     top: 155%;
     z-index: 3;
-    background-color: var(--bg-nested);
     border: 1px solid var(--color-borderLight);
     border-radius: 5px;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
@@ -17,6 +16,19 @@
     cursor: default;
     opacity: 0;
     visibility: hidden;
+    transition: var(--transition-main);
+}
+.navbarSec .profileBox::before {
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 5px;
+    backdrop-filter: var(--main-blur);
+    background: var(--bg-glass);
     transition: var(--transition-main);
 }
 .navbarSec .profileBox .proBxLink{
