--- a/src/Sections/NavbarSec/NavbarSec.css
+++ b/src/Sections/NavbarSec/NavbarSec.css
@@ -8,6 +8,7 @@
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.212);
     background-color: var(bg-body);
 }
+
 .navbarSec .navContainer{
     position: relative;
     height: 60px;
@@ -16,9 +17,19 @@
     align-items: center;
     padding: 0px 40px;
     z-index: 3;
-    backdrop-filter: var(--main-blur);
-    background-color: var(--bg-glass);
+}
+.navbarSec .navContainer::before {
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
     border-bottom: 1px solid var(--color-borderLight);
+    backdrop-filter: var(--main-blur);
+    background: var(--bg-glass);
+    transition: var(--transition-main);
 }
 
 
@@ -57,7 +68,7 @@
     font-size: 14px;
     font-weight: 600;
     color: #fff;
-    background-color: var(--font-navColor);
+    background-color: var(--color-primary);
 }
 
 
@@ -68,10 +79,12 @@
     position: relative;
     width: 33px;
     height: 33px;
-    border-radius: 5px;
-    background-color: var(--font-navColor);
     display: grid;
     place-content: center;
+    border-radius: 5px;
+    border: 1px solid var(--color-borderLight);
+    background-color: transparent;
+    color: var(--font-navColor);
     cursor: pointer;
     transition: var(--transition-main);
 }
@@ -83,6 +96,8 @@
 .navbarSec .icnWrapperSrch:hover{
     color: #fff;
     background-color: var(--color-primary);
+    border-color: var(--color-primary);
+
 }
 .navbarSec .icnWrapperSrch.active{
     color: #fff;
@@ -90,12 +105,6 @@
 }
 
 
-
-/* @media screen and (max-width: 992px) {
-    .navbarSec .navContainer{
-        padding: 0px 20px;
-    }
-} */
 @media screen and (max-width: 768px) {
     /*displays*/
     .navbarSec .icnWrapperSrch{
