--- a/src/Sections/SidebarSec/SidebarSec.css
+++ b/src/Sections/SidebarSec/SidebarSec.css
@@ -1,15 +1,12 @@
 
-/* src/components/Sidebar.css */
 .sidebar {
   position: fixed;
-  left: -250px; 
   width: 250px;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translate(-100%, -50%);
   height: 98vh;
   padding-block: 20px 5px;
   background-color: var(--bg-glass);
-  backdrop-filter: var(--main-blur);
   border: 1px solid #ffffff23;
   border-radius: 10px;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
@@ -18,15 +15,28 @@
   border-radius: 10px;
   transition: var(--transition-sec);
 }
+.sidebar::before {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 10px;
+  backdrop-filter: var(--main-blur);
+  background: var(--bg-glass);
+}
 .sidebar.open {
-  left: 7px;
+  transform: translate(3%, -50%);
 }
 
 html[dir="rtl"] .sidebar {
-  right: -250px; 
+  transform: translate(100%, -50%);
+
 }
 html[dir="rtl"] .sidebar.open {
-  right: 7px;
+  transform: translate(-3%, -50%);
 }
 
 
@@ -75,18 +85,8 @@ html[dir="rtl"] .sidebar.open .open-sidebar-btn {
 
 
 
-
-/* @media screen and ( max-width: 768px ) {
-  .sidebar {
-    z-index: 998;
-  }
-  .sidebar.open {
-    z-index: 999;
-  }
-} */
 @media screen and ( max-width: 300px ) {
   .sidebar.open {
     width: 95%;
-    left: 6px;
   }
 }
