--- a/src/Components/NavbarCom/Search/Search.css
+++ b/src/Components/NavbarCom/Search/Search.css
@@ -22,8 +22,7 @@
     left: 50%;
     transform: translate(-50%, -100%);
     padding: 10px 20px;
-    /* backdrop-filter: var(--main-blur); */
-    background-color: #5c5c5ce1;
+    background-color: var(--bg-nested);
     border: 1px solid #ffffff23;
     border-radius: 5px;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
