--- a/src/Components/NavbarCom/ProfileBox/ProfileBox.css
+++ b/src/Components/NavbarCom/ProfileBox/ProfileBox.css
@@ -1,3 +1,6 @@
+html[dir="rtl"] .navbarSec .profileBox{
+    right: -125px;
+}
 /*Profile Box*/
 .navbarSec .profileBox {
     pointer-events: none;
@@ -6,6 +9,7 @@
     align-items: center;
     width: 170px;
     position: absolute;
+    right: -10px;
     top: 155%;
     z-index: 3;
     border: 1px solid var(--color-borderLight);
