--- a/src/Components/NavbarCom/ProfileBox/ProfileBox.css
+++ b/src/Components/NavbarCom/ProfileBox/ProfileBox.css
@@ -110,6 +110,7 @@ html[dir="rtl"] .navbarSec .profileBox{
 
 .profileBox .proBxLink .langBtnWrapper{
     width: 100%;
+    height: auto;
     padding-inline: 0px;
     margin-inline: 0px;
     border: none;
