--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); */
 
 /* Define dark mode variables */
 :root {
@@ -79,17 +78,7 @@ html{
     scroll-behavior: smooth;
 }
 
-html[dir="rtl"] body {
-    direction: rtl;
-    text-align: right;
-    font-family: "Noto Sans Arabic", sans-serif;
-}
 
-html[dir="ltr"] body {
-    direction: ltr;
-    text-align: left;
-    font-family: 'Open Sans', system-ui, sans-serif;
-}
 
 
 *, *::before, *::after {
@@ -100,8 +89,18 @@ html[dir="ltr"] body {
 ::-webkit-scrollbar-track       { background-color: var(--bg-component)     ;}
 ::-webkit-scrollbar-thumb       { background-color: var(--color-primary)    ;}
 
+
+html[dir="rtl"] body {
+    direction: rtl;
+    text-align: right;
+}
+
+/* html[dir="ltr"] body {
+    direction: ltr;
+    text-align: left;
+} */
 body {
-    font-family: 'Open Sans', system-ui, sans-serif;
+    font-family: 'Cairo', sans-serif;
     background-color:  var(--bg-body) ;
     color: var(--font-mainColor);
     scroll-behavior: smooth;
