--- a/src/Components/Buttons/LangBtn/LangBtn.css
+++ b/src/Components/Buttons/LangBtn/LangBtn.css
@@ -3,9 +3,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-inline: 10px;
-    margin-inline: 10px;
-    border-inline: 1px solid var(--color-borderLight);
+    width: 33px;
+    height: 33px;
+    border-radius: 5px;
+    border: 1px solid var(--color-borderLight);
     cursor: pointer;
     transition: var(--transition-main);
 }
@@ -26,8 +27,8 @@
 }
 .langBtn svg{
     position: relative;
-    left: -1px;
-    font-size: 25px;
+    /* left: -1px; */
+    font-size: 20px;
     transition: var(--transition-main);
 }
 .langBtn span{
@@ -43,6 +44,9 @@
 
 
 /*start effect*/
+.langBtnWrapper:hover {
+    border-color: var(--color-primary);
+}
 .langBtnWrapper:hover span {
     color: var(--color-primary);
     visibility: visible;
