--- a/src/Components/NavbarCom/NavBtn/NavBtn.css
+++ b/src/Components/NavbarCom/NavBtn/NavBtn.css
@@ -1,18 +1,17 @@
     /*Button*/
     .navbarSec .navBtn{
         position: relative;
-        left: 5px;
         display: flex;
         flex-direction: column;
         gap: 4px;
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        border-radius: 50% ;
+        border-radius: 5px ;
         width: 33px;
         height: 33px;
         background-color: transparent;
-        border: 1px solid var(--font-navColor);
+        border: 1px solid var(--color-borderLight);
         transition: var(--transition-main);
     }
     .navbarSec .navBtn.opened{
