--- a/src/Components/Buttons/ThemeBtn/ThemeBtn.css
+++ b/src/Components/Buttons/ThemeBtn/ThemeBtn.css
@@ -21,7 +21,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #cccccc49;
     -webkit-transition: .4s;
     transition: .4s;
 }
