--- a/src/Components/NavbarCom/ProfileBox/ProfileBox.css
+++ b/src/Components/NavbarCom/ProfileBox/ProfileBox.css
@@ -1,5 +1,6 @@
 html[dir="rtl"] .navbarSec .profileBox{
-    right: -125px;
+    left: 0px;
+    right: unset;
 }
 /*Profile Box*/
 .navbarSec .profileBox {
@@ -9,7 +10,8 @@ html[dir="rtl"] .navbarSec .profileBox{
     align-items: center;
     width: 170px;
     position: absolute;
-    right: -10px;
+    right: 0px;
+    left: unset;
     top: 155%;
     z-index: 3;
     border: 1px solid var(--color-borderLight);
