--- a/src/Components/Buttons/ThemeBtn/ThemeBtn.css
+++ b/src/Components/Buttons/ThemeBtn/ThemeBtn.css
@@ -39,11 +39,11 @@
 }
 
 .switch input:checked + .slider {
-    background-color: #2196F3;
+    background-color: var(--color-primary);
 }
 
 .switch input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px var(--color-primary);
 }
 
 .switch input:checked + .slider:before {
