--- a/src/Sections/SidebarSec/SidebarSec.css
+++ b/src/Sections/SidebarSec/SidebarSec.css
@@ -4,7 +4,7 @@
   width: 250px;
   top: 50%;
   transform: translate(-100%, -50%);
-  height: 98vh;
+  height: 98dvh;
   padding-block: 10px 5px;
   border: 1px solid #ffffff23;
   border-radius: 10px;
