add product card

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 
     /* Background Colors */
     --bg-glass              : #111111a4;
-    --bg-body               : #eee;
+    --bg-body               : #efefef;
     --bg-footer             : #f3f3f3d8;
     --bg-section            : #ffffffef;
     --bg-component          : #fff;
