--- a/src/Components/SectionWrapper/SectionWrapper.css
+++ b/src/Components/SectionWrapper/SectionWrapper.css
@@ -9,6 +9,7 @@
     text-align: center;
     margin-bottom: 15px;
     border-radius: 5px;
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1); */
 }
 .MainSection .SectionTitle a{
     display: flex;
@@ -31,6 +32,7 @@
     padding: 35px;
     border-radius: 5px;
     background-color: var(--bg-section);
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1); */
 }
 
 @media screen and (max-width:768px) {
