--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -10,6 +10,7 @@
     border-radius: 8px;
     width: 250px;
     min-width: 250px;
+    border: 1px solid var(--color-borderSecLight);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1); /* Smooth shadow */
     overflow: hidden;
     cursor: default;
@@ -122,9 +123,10 @@
 }
 
 .product-card .priceWrapper{
+    background-color: var(--bg-body);
     padding: 10px 15px;
     margin-bottom: 0;
-    border-bottom: 1px solid var(--color-borderLight);
+    border-block: 1px solid var(--color-borderSecLight);
 }
 .product-card .price {
     font-size: 22px;
