--- a/src/Sections/NavbarSec/NavbarSec.css
+++ b/src/Sections/NavbarSec/NavbarSec.css
@@ -8,6 +8,8 @@
     z-index: 999;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.212);
     background-color: var(bg-body);
+    max-width: 1440px;
+    margin-inline: auto;
 }
 
 .navbarSec .navContainer{
