--- a/src/Components/ProductCardComponents/ProductCard/ProductCard.css
+++ b/src/Components/ProductCardComponents/ProductCard/ProductCard.css
@@ -1,14 +1,19 @@
-
-.product-card {
+.cardWrapper{
     position: relative;
     flex: 1 23%;
-    background-color: var(--bg-body);
-    border-radius: 8px;
     width: 250px;
+    max-width: 280px;
     min-width: 230px;
-    border: 1px solid var(--color-borderSecLight);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+.product-card {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    border: 1px solid var(--color-borderSecLight);
+    background-color: var(--bg-body);
     cursor: default;
     transition: var(--transition-main);
     transition: transform 0.2s, box-shadow 0.2s;
@@ -164,3 +169,11 @@
 }
 
 /*end effect*/
+
+
+@media screen and (max-width: 992px) {
+    .cardWrapper {
+        flex: 1 33%;
+        max-width: 100%;
+    }
+}
