add favorites Page

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
     --margin-main           : calc(var(--distance-main) - ( var(--distance-main) / 2 ));
     --padding-main          : calc(var(--distance-main) - ( var(--distance-main) / 3 ));
     --mainShadow            : 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1);
+    --secShadow             : 0 8px 12px rgba(0, 0, 0, 0.15), 0 16px 24px rgba(0, 0, 0, 0.15);
 }
 
 /* Define light mode variables */
