--- a/src/Components/DetailsPageComponents/ProductDetails/ProductDetails.css
+++ b/src/Components/DetailsPageComponents/ProductDetails/ProductDetails.css
@@ -135,27 +135,32 @@
 .detailsPage 
 .product-review button {
     position: absolute;
-    top: 6px;
+    bottom: 0;
     right: -23px;
-    transform: translateX(-130%);
-    width: 30px;
-    height: 30px;
+    transform: translate(-180%, -25%);
+    width: 27px;
+    height: 27px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid var(--color-borderSecLight);
-    border-radius: 3px;
+    border-radius: 50%;
     background-color: var(--bg-component);
     color: var(--font-secondaryColor);
-    font-size: 12px;
+    font-size: 11px;
     cursor: pointer;
     transition: var(--transition-main);
 }
 html[dir="rtl"] .detailsPage 
 .product-review button{
- right: unset;
- left: 0px;
- transform: translateX(55%);
+    right: unset;
+    left: 0px;
+    transform: translateX(55%);
+    transform: translate( 85%, -27%);
+}
+html[dir="rtl"] .detailsPage 
+.product-review button svg{
+    transform: rotate(180deg);
 }
 
 .detailsPage 
@@ -245,6 +250,13 @@ html[dir="rtl"] .detailsPage
 
 
 
+.detailsPage .btnsWrapper .favorite-button {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+
 @media screen and ( max-width: 550px ) {
     .detailsPage .midDet {
         flex: 1; 
@@ -254,3 +266,4 @@ html[dir="rtl"] .detailsPage
         min-width: 100%;
     }
 }
+
