--- a/src/Components/LoadingSec/LoadingSec.css
+++ b/src/Components/LoadingSec/LoadingSec.css
@@ -1,10 +1,20 @@
+:root {
+	--hue: 223;
+	--bg: hsl(var(--hue),10%,90%);
+	--fg: hsl(var(--hue),10%,10%);
+	--primary: hsl(var(--hue),90%,55%);
+	--trans-dur: 0.3s;
+	/* font-size: calc(16px + (20 - 16) * (100vw - 320px) / (1280 - 320)); */
+}
+
 .LoadingSec-screen{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: radial-gradient(circle farthest-corner at center, #3C4B57 0%, #1C262B 100%);
+    background-color: #00000098;
+    backdrop-filter: blur(5px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,68 +29,132 @@
     display: none;
 }
 
-.LoadingSec-screen .loader {
-    position: absolute;
-    top: calc(50% - 32px);
-    left: calc(50% - 32px);
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    perspective: 800px;
+
+.LoadingSec-screen .preloader {
+	text-align: center;
+	max-width: 20em;
+	width: 100%;
+}
+.LoadingSec-screen .preloader__text {
+	position: relative;
+	height: 1.5em;
+}
+.LoadingSec-screen .preloader__msg {
+	animation: msg 0.3s 13.7s linear forwards;
+	position: absolute;
+	width: 100%;
+}
+.LoadingSec-screen .preloader__msg--last {
+	animation-direction: reverse;
+	animation-delay: 14s;
+	visibility: hidden;
+}
+.LoadingSec-screen .cart {
+	display: block;
+	margin: 0 auto 1.5em auto;
+	width: 5em;
+	height: 5em;
+}
+.LoadingSec-screen .cart__lines,
+.LoadingSec-screen .cart__top,
+.LoadingSec-screen .cart__wheel1,
+.LoadingSec-screen .cart__wheel2,
+.LoadingSec-screen .cart__wheel-stroke {
+	animation: cartLines 2s ease-in-out infinite;
+}
+.LoadingSec-screen .cart__lines {
+	stroke: var(--primary);
+}
+.LoadingSec-screen .cart__top {
+	animation-name: cartTop;
+}
+.LoadingSec-screen .cart__wheel1 {
+	animation-name: cartWheel1;
+	transform: rotate(-0.25turn);
+	transform-origin: 43px 111px;
+}
+.LoadingSec-screen .cart__wheel2 {
+	animation-name: cartWheel2;
+	transform: rotate(0.25turn);
+	transform-origin: 102px 111px;
+}
+.LoadingSec-screen .cart__wheel-stroke {
+	animation-name: cartWheelStroke
+}
+.LoadingSec-screen .cart__track {
+	stroke: hsla(var(--hue),10%,10%,0.1);
+	transition: stroke var(--trans-dur);
 }
 
-.LoadingSec-screen .loader .inner {
-    position: absolute;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;  
+/* Dark theme */
+@media (prefers-color-scheme: dark) {
+	:root {
+		--bg: hsl(var(--hue),10%,10%);
+		--fg: hsl(var(--hue),10%,90%);
+	}
+	.cart__track {
+		stroke: hsla(var(--hue),10%,90%,0.1);
+	}
 }
 
-.LoadingSec-screen .loader .inner.one {
-    left: 0%;
-    top: 0%;
-    animation: rotate-one 1s linear infinite;
-    border-bottom: 3px solid #EFEFFA;
+/* Animations */
+@keyframes msg {
+	from {
+		opacity: 1;
+		visibility: visible;
+	}
+	99.9% {
+		opacity: 0;
+		visibility: visible;
+	}
+	to {
+		opacity: 0;
+		visibility: hidden;
+	}
 }
-
-.LoadingSec-screen .loader .inner.two {
-    right: 0%;
-    top: 0%;
-    animation: rotate-two 1s linear infinite;
-    border-right: 3px solid #EFEFFA;
+@keyframes cartLines {
+	from,
+	to {
+		opacity: 0;
+	}
+	8%,
+	92% {
+		opacity: 1;
+	}
 }
-
-.LoadingSec-screen .loader .inner.three {
-    right: 0%;
-    bottom: 0%;
-    animation: rotate-three 1s linear infinite;
-    border-top: 3px solid #EFEFFA;
+@keyframes cartTop {
+	from {
+		stroke-dashoffset: -338;
+	}
+	50% {
+		stroke-dashoffset: 0;
+	}
+	to {
+		stroke-dashoffset: 338;
+	}
 }
-
-@keyframes rotate-one {
-    0% {
-    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
-    }
-    100% {
-    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
-    }
+@keyframes cartWheel1 {
+	from {
+		transform: rotate(-0.25turn);
+	}
+	to {
+		transform: rotate(2.75turn);
+	}
 }
-
-@keyframes rotate-two {
-    0% {
-    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
-    }
-    100% {
-    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
-    }
+@keyframes cartWheel2 {
+	from {
+		transform: rotate(0.25turn);
+	}
+	to {
+		transform: rotate(3.25turn);
+	}
 }
-
-@keyframes rotate-three {
-    0% {
-    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
-    }
-    100% {
-    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
-    }
+@keyframes cartWheelStroke {
+	from,
+	to {
+		stroke-dashoffset: 81.68;
+	}
+	50% {
+		stroke-dashoffset: 40.84;
+	}
 }
