--- a/src/Components/NavbarCom/NestedLink/NestedLink..css
+++ b/src/Components/NavbarCom/NestedLink/NestedLink..css
@@ -1,6 +1,7 @@
 .navbarSec .navLinks > 
 li:has(.nestedLinkBox.opened) .navLink {
     color: var(--color-primary);
+    filter: drop-shadow(0px 0px 4px );
 }
 
 
