--- a/src/Components/Buttons/ToTopBtn/ToTopBtn.css
+++ b/src/Components/Buttons/ToTopBtn/ToTopBtn.css
@@ -1,17 +1,21 @@
 /*START UP Button*/
+html[dir="rtl"] .arrow-btn{
+    right: unset;
+    left: -15px;
+}
 .arrow-btn{
-    width: 45px;
-    height: 45px;
+    width: 35px;
+    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
-    bottom: .5%;
-    right: 50%;
-    transform: translateX(50%);
-    z-index: 5000;
-    font-size: 23px;
-    border-radius: 50%;
+    bottom: 0px;
+    right: 20px;
+    transform: translate(50%, 100%);
+    z-index: 997;
+    font-size: 18px;
+    border-radius: 5px;
     border: 1px solid var(--color-primary);
     box-shadow: none;
     outline: none;
@@ -24,11 +28,13 @@
 .arrow-btn:hover{
     opacity: 1;
 }
-@media screen and (max-width:575px){
-    .arrow-btn{
-        right: 50%;
-        transform: translateX(50%);
-        border-radius: 50%;
+
+.arrow-btn.visible{
+    transform: translate(50%, -50%);
+}
+@media screen and (max-width:768px){
+    .arrow-btn.visible{
+        transform: translate(50%, -180%);
     }
 }
 /*END UP Button*/
