--- a/src/Components/CartLink/CartLink.css
+++ b/src/Components/CartLink/CartLink.css
@@ -1,3 +1,14 @@
+.navbarSec .cartBtn{
+    width: 33px;
+    height: 33px;
+    display: grid;
+    place-content: center;
+    border-radius: 5px;
+    border: 1px solid var(--color-borderLight);
+    font-size: 17px;
+    transition: var(--transition-main);
+}
+
 .cartBtnWrapper.active .cartBtn{
     color: var(--color-primary) !important;
     filter: drop-shadow(0px 0px 4px );
@@ -8,3 +19,16 @@
 .cartBtnWrapper .cartBtn:hover svg{
     color: var(--color-primary);
 }
+
+
+
+.navbarSec .navProfIcon:hover{
+    color: var(--color-primary);
+    border-color: var(--color-primary);
+}
+.navbarSec .navProfIcon.active{
+    color: var(--color-primary);
+    filter: drop-shadow( 0px 0px 4px );
+}
+
+
