--- a/src/Components/ProductCardComponents/ProductCard/ProductCard.css
+++ b/src/Components/ProductCardComponents/ProductCard/ProductCard.css
@@ -62,25 +62,25 @@
 }
 .product-card .product-colors {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .product-card .size-button{
     background-color: var(--bg-component);
-    color: var(--color-primary);
+    color: var(--font-secondaryColor);
 }
 .product-card .size-button,
 .product-card .color-button {
     margin: 5px;
-    width: 25px;
-    height: 25px;
+    width: 27px;
+    height: 27px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 10px;
     font-weight: 700;
-    border-radius: 50%;
-    border: 2px solid var(--bg-body);
+    border-radius: 5px;
+    border: 1px solid var(--bg-body);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: var(--transition-main);
